# rescue

./: .gitignore  .hammett-db  LICENSE  README.md  comparison.md  pyproject.toml  setup.cfg
enact/: core.py  exc.py  fx.py  mypy.py
example/: exc.py  fx.py  mut.py
rescue/: __init__.py  core.py  mypy.py  util.py
scripts/: check.sh  coverage.sh  lint.sh  test.sh
tests/: exc.py  test_bind_composition.py  test_context.py  test_core.py  test_exc.py  test_fx.py  test_handler.py  test_throw.py  test_unwrap.py
